# Trabajo-3

Desafio3/: CMakeLists.txt  calamar.cpp  calamar.h  cangrejo.cpp  cangrejo.h  enemigo.cpp  enemigo.h  enemigociclista.cpp  enemigociclista.h  ersjuandOneDriveDocumentos  fondo.cpp  fondo.h  jugador.cpp  jugador.h  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  meta.cpp  meta.h  nivel1.cpp  nivel1.h  nivel2.cpp  nivel2.h  nivelbase.cpp  nivelbase.h  obstaculo.cpp  obstaculo.h  pantallafinal.cpp  pantallafinal.h  pantallatransicion.cpp  pantallatransicion.h  recursos.qrc  tiburon.cpp  tiburon.h
