cmake_minimum_required(VERSION 3.16)
project(Desafio3 VERSION 0.1 LANGUAGES CXX)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
set(PROJECT_SOURCES
        main.cpp
        mainwindow.cpp
        mainwindow.h
        mainwindow.ui
)
if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(Desafio3
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
        jugador.h jugador.cpp
        fondo.h fondo.cpp
        recursos.qrc
        nivelbase.h nivelbase.cpp
        nivel1.h nivel1.cpp
        nivel2.h nivel2.cpp
        menu.h menu.cpp
        obstaculo.h obstaculo.cpp
        meta.h meta.cpp
        pantallatransicion.h pantallatransicion.cpp
        enemigociclista.h enemigociclista.cpp
        enemigo.h enemigo.cpp
        tiburon.h tiburon.cpp
        cangrejo.h cangrejo.cpp
        calamar.h calamar.cpp

    )
else()
    if(ANDROID)
        add_library(Desafio3 SHARED
            ${PROJECT_SOURCES}
        )
    else()
        add_executable(Desafio3
            ${PROJECT_SOURCES}
        )
    endif()
endif()
target_link_libraries(Desafio3 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.Desafio3)
endif()
set_target_properties(Desafio3 PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)
include(GNUInstallDirs)
install(TARGETS Desafio3
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(Desafio3)
endif()
